--- a/index.html
+++ b/index.html
@@ -3037,4 +3037,12 @@ Footer Scripts
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit-icons.min.js"></script>
 <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-<scri
+<script src="assets/js/animated-headlines.js"></script> 
+<script src="assets/js/back-to-top.js"></script>
+<script>document.getElementsByTagName("html")[0].className += " js";</script>
+<!-- at the bottom of the page -->
+<script type="text/javascript">
+  window.mdc.autoInit();
+</script>
+</body>
+</html>
