dealer signup with material

--- a/dealers.html
+++ b/dealers.html
@@ -2019,7 +2019,7 @@ Why SVL Global
 							  </div>
 							</div>
 						</div>
-						<div class="uk-width-1-6">
+						<div class="uk-width-1-5">
 							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
@@ -2027,7 +2027,7 @@ Why SVL Global
 								   aria-expanded="false"
 								   aria-labelledby="demo-label demo-selected-text">
 								<span class="mdc-select__ripple"></span>
-								<span id="demo-label" class="mdc-floating-label">+91</span>
+								<span id="demo-label" class="mdc-floating-label">Mobile Prefix</span>
 								<span class="mdc-select__selected-text-container">
 								  <span id="demo-selected-text" class="mdc-select__selected-text"></span>
 								</span>
@@ -2060,6 +2060,12 @@ Why SVL Global
 								  <li class="mdc-list-item" aria-selected="false" data-value="grains" role="option">
 									<span class="mdc-list-item__ripple"></span>
 									<span class="mdc-list-item__text">
+									  +91
+									</span>
+								  </li>
+									<li class="mdc-list-item" aria-selected="false" data-value="grains" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
 									  +92
 									</span>
 								  </li>
@@ -2087,7 +2093,7 @@ Why SVL Global
 								<span class="mdc-line-ripple"></span>
 							</label>
 						</div>
-						<div class="uk-width-3-4">
+						<div class="uk-width-2-5">
 							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Email ID*</span>
@@ -2096,33 +2102,217 @@ Why SVL Global
 							</label>
 						</div>
 						<div class="uk-width-1-3">
-							<select class="form-control">
-								<option selected disabled>Country</option>
-								<option>Option 02</option>
-							</select>
+							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							  <div class="mdc-select__anchor"
+								   role="button"
+								   aria-haspopup="listbox"
+								   aria-expanded="false"
+								   aria-labelledby="demo-label demo-selected-text">
+								<span class="mdc-select__ripple"></span>
+								<span id="demo-label" class="mdc-floating-label">Country</span>
+								<span class="mdc-select__selected-text-container">
+								  <span id="demo-selected-text" class="mdc-select__selected-text"></span>
+								</span>
+								<span class="mdc-select__dropdown-icon">
+								  <svg
+									  class="mdc-select__dropdown-icon-graphic"
+									  viewBox="7 10 10 5" focusable="false">
+									<polygon
+										class="mdc-select__dropdown-icon-inactive"
+										stroke="none"
+										fill-rule="evenodd"
+										points="7 10 12 15 17 10">
+									</polygon>
+									<polygon
+										class="mdc-select__dropdown-icon-active"
+										stroke="none"
+										fill-rule="evenodd"
+										points="7 15 12 10 17 15">
+									</polygon>
+								  </svg>
+								</span>
+								<span class="mdc-line-ripple"></span>
+							  </div>
+
+							  <div class="mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth">
+								<ul class="mdc-list" role="listbox" aria-label="Food picker listbox">
+								  <li class="mdc-list-item mdc-list-item--selected" aria-selected="true" data-value="" role="option">
+									<span class="mdc-list-item__ripple"></span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="grains" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  India
+									</span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="fruit" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  United States of America
+									</span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="fruit" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  United Kingdom
+									</span>
+								  </li>
+								</ul>
+							  </div>
+							</div>
 						</div>
 						<div class="uk-width-1-3">
-							<select class="form-control">
-								<option selected>State</option>
-								<option>Option 02</option>
-							</select>
+							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							  <div class="mdc-select__anchor"
+								   role="button"
+								   aria-haspopup="listbox"
+								   aria-expanded="false"
+								   aria-labelledby="demo-label demo-selected-text">
+								<span class="mdc-select__ripple"></span>
+								<span id="demo-label" class="mdc-floating-label">State</span>
+								<span class="mdc-select__selected-text-container">
+								  <span id="demo-selected-text" class="mdc-select__selected-text"></span>
+								</span>
+								<span class="mdc-select__dropdown-icon">
+								  <svg
+									  class="mdc-select__dropdown-icon-graphic"
+									  viewBox="7 10 10 5" focusable="false">
+									<polygon
+										class="mdc-select__dropdown-icon-inactive"
+										stroke="none"
+										fill-rule="evenodd"
+										points="7 10 12 15 17 10">
+									</polygon>
+									<polygon
+										class="mdc-select__dropdown-icon-active"
+										stroke="none"
+										fill-rule="evenodd"
+										points="7 15 12 10 17 15">
+									</polygon>
+								  </svg>
+								</span>
+								<span class="mdc-line-ripple"></span>
+							  </div>
+
+							  <div class="mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth">
+								<ul class="mdc-list" role="listbox" aria-label="Food picker listbox">
+								  <li class="mdc-list-item mdc-list-item--selected" aria-selected="true" data-value="" role="option">
+									<span class="mdc-list-item__ripple"></span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="grains" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  Andhra Pradesh
+									</span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="fruit" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  Telangana
+									</span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="fruit" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  Karnataka
+									</span>
+								  </li>
+								</ul>
+							  </div>
+							</div>
 						</div>
 						<div class="uk-width-1-3">
-							<select class="form-control">
-								<option>City</option>
-								<option>Option 02</option>
-							</select>
+							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							  <div class="mdc-select__anchor"
+								   role="button"
+								   aria-haspopup="listbox"
+								   aria-expanded="false"
+								   aria-labelledby="demo-label demo-selected-text">
+								<span class="mdc-select__ripple"></span>
+								<span id="demo-label" class="mdc-floating-label">City</span>
+								<span class="mdc-select__selected-text-container">
+								  <span id="demo-selected-text" class="mdc-select__selected-text"></span>
+								</span>
+								<span class="mdc-select__dropdown-icon">
+								  <svg
+									  class="mdc-select__dropdown-icon-graphic"
+									  viewBox="7 10 10 5" focusable="false">
+									<polygon
+										class="mdc-select__dropdown-icon-inactive"
+										stroke="none"
+										fill-rule="evenodd"
+										points="7 10 12 15 17 10">
+									</polygon>
+									<polygon
+										class="mdc-select__dropdown-icon-active"
+										stroke="none"
+										fill-rule="evenodd"
+										points="7 15 12 10 17 15">
+									</polygon>
+								  </svg>
+								</span>
+								<span class="mdc-line-ripple"></span>
+							  </div>
+
+							  <div class="mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth">
+								<ul class="mdc-list" role="listbox" aria-label="Food picker listbox">
+								  <li class="mdc-list-item mdc-list-item--selected" aria-selected="true" data-value="" role="option">
+									<span class="mdc-list-item__ripple"></span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="grains" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  Hyderabad
+									</span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="fruit" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  Banglore
+									</span>
+								  </li>
+								  <li class="mdc-list-item" aria-selected="false" data-value="fruit" role="option">
+									<span class="mdc-list-item__ripple"></span>
+									<span class="mdc-list-item__text">
+									  Chennai
+									</span>
+								  </li>
+								</ul>
+							  </div>
+							</div>
 						</div>
 						<div>
-							<input class="form-control" type="text" placeholder="Create Password*">
+							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+								<span class="mdc-text-field__ripple"></span>
+								<span class="mdc-floating-label" id="my-label-id">Create Password*</span>
+								<input class="mdc-text-field__input" type="password" aria-labelledby="my-label-id">
+								<span class="mdc-line-ripple"></span>
+							</label>
 						</div>
 						<div>
-							<input class="form-control" type="text" placeholder="Confirm Password*">
+							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+								<span class="mdc-text-field__ripple"></span>
+								<span class="mdc-floating-label" id="my-label-id">Confirm Password*</span>
+								<input class="mdc-text-field__input" type="password" aria-labelledby="my-label-id">
+								<span class="mdc-line-ripple"></span>
+							</label>
 						</div>
 						<div class="uk-width-1-1 mt-4">
 							<div class="uk-child-width-1-3 uk-flex-center uk-flex-middle" uk-grid>
 								<div>
-									<label><input class="uk-checkbox" type="checkbox" checked> I agree <a href="#">Terms and Conditions</a></label>
+									<div class="mdc-form-field d-flex align-items-center" data-mdc-auto-init="MDCFormField">
+									  <div class="mdc-checkbox" data-mdc-auto-init="MDCCheckbox">
+										<input type="checkbox" class="mdc-checkbox__native-control" id="checkbox-1"/>
+										<div class="mdc-checkbox__background">
+										  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+											<path class="mdc-checkbox__checkmark-path" fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+										  </svg>
+										  <div class="mdc-checkbox__mixedmark"></div>
+										</div>
+										<div class="mdc-checkbox__ripple"></div>
+									  </div>
+									  <label for="checkbox-1" class="mb-0">I agree <a href="#">Terms and Conditions</a></label>
+									</div>
 								</div>
 								<div>
 									<img src="assets/img/newCaptchaAnchor.gif" alt="" uk-img width="200">
