--- a/dealers.html
+++ b/dealers.html
@@ -1822,7 +1822,7 @@ Why SVL Global
 				<div class="uk-container uk-text-center">
 					<form action="" class="form-divider uk-grid-small uk-child-width-expand" uk-grid>
 						<div class="uk-width-1-5">
-							<div class="mdc-select mdc-select--filled demo-width-class" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled w-100 dense-comfortable" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -1876,7 +1876,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-2-5">
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled dense-comfortable w-100" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Business Name*</span>
 								<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
@@ -1884,7 +1884,7 @@ Why SVL Global
 							</label>
 						</div>
 						<div class="uk-width-2-5">
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled dense-comfortable w-100" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Contact Person Name</span>
 								<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
@@ -1892,7 +1892,7 @@ Why SVL Global
 							</label>
 						</div>
 						<div class="uk-width-1-5">
-							<div class="mdc-select mdc-select--filled demo-width-class" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled w-100 dense-comfortable" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -1952,7 +1952,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-2-5">
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled w-100 dense-comfortable" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Website URL</span>
 								<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
@@ -1960,7 +1960,7 @@ Why SVL Global
 							</label>
 						</div>
 						<div class="uk-width-2-5">
-							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled demo-width-class w-100 dense-comfortable" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -2020,7 +2020,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-1-5">
-							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled demo-width-class w-100 dense-comfortable" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -2086,7 +2086,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-2-5">
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled w-100 dense-comfortable" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Contact Number*</span>
 								<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
@@ -2094,7 +2094,7 @@ Why SVL Global
 							</label>
 						</div>
 						<div class="uk-width-2-5">
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled w-100 dense-comfortable" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Email ID*</span>
 								<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
@@ -2102,7 +2102,7 @@ Why SVL Global
 							</label>
 						</div>
 						<div class="uk-width-1-3">
-							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled dense-comfortable w-100" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -2162,7 +2162,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-1-3">
-							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled dense-comfortable w-100" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -2222,7 +2222,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-1-3">
-							<div class="mdc-select mdc-select--filled demo-width-class w-100" data-mdc-auto-init="MDCSelect">
+							<div class="mdc-select mdc-select--filled dense-comfortable w-100" data-mdc-auto-init="MDCSelect">
 							  <div class="mdc-select__anchor"
 								   role="button"
 								   aria-haspopup="listbox"
@@ -2282,7 +2282,7 @@ Why SVL Global
 							</div>
 						</div>
 						<div>
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled w-100 dense-comfortable" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Create Password*</span>
 								<input class="mdc-text-field__input" type="password" aria-labelledby="my-label-id">
@@ -2290,7 +2290,7 @@ Why SVL Global
 							</label>
 						</div>
 						<div>
-							<label class="mdc-text-field mdc-text-field--filled w-100" data-mdc-auto-init="MDCTextField">
+							<label class="mdc-text-field mdc-text-field--filled w-100 dense-comfortable" data-mdc-auto-init="MDCTextField">
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Confirm Password*</span>
 								<input class="mdc-text-field__input" type="password" aria-labelledby="my-label-id">
