--- a/dealers.html
+++ b/dealers.html
@@ -3049,6 +3049,16 @@ Why SVL Global
 							</div>
 						</div>
 						<div class="uk-width-1-1">
+							<label class="mdc-text-field mdc-text-field--filled mdc-text-field--textarea w-100" data-mdc-auto-init="MDCTextField">
+								<span class="mdc-text-field__ripple"></span>
+								<span class="mdc-floating-label" id="my-label-id">Description</span>
+								<span class="mdc-text-field__resizer">
+								<textarea class="mdc-text-field__input" rows="1" cols="40" aria-label="Label"></textarea>
+								</span>
+								<span class="mdc-line-ripple"></span>
+							</label>
+						</div>
+						<div class="uk-width-1-1">
 							<div class="uk-child-width-1-3 uk-flex-center uk-flex-middle" uk-grid>
 								<div>
 									<div class="mdc-form-field d-flex align-items-center" data-mdc-auto-init="MDCFormField">
