--- a/dealers.html
+++ b/dealers.html
@@ -1547,6 +1547,7 @@ Why SVL Global
 			</nav>
 		</div>
 		<main class="col border-left-2 overflow-hidden">
+			<img class="uk-border-rounded p-3" width="1920" height="500" src="https://picsum.photos/1920/500?random=1">
 			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Why Join With Us</span></h2>
 				<p class="font-size-4 mb-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, neque, libero. Placeat vitae optio temporibus magni ut, dicta ipsam sit distinctio ad reiciendis aliquid doloremque pariatur cupiditate. Quis, quidem, officiis.</em></p>
@@ -3053,7 +3054,7 @@ Why SVL Global
 								<span class="mdc-text-field__ripple"></span>
 								<span class="mdc-floating-label" id="my-label-id">Description</span>
 								<span class="mdc-text-field__resizer">
-								<textarea class="mdc-text-field__input" rows="1" cols="40" aria-label="Label"></textarea>
+									<textarea class="mdc-text-field__input" rows="1" cols="40" aria-label="Label"></textarea>
 								</span>
 								<span class="mdc-line-ripple"></span>
 							</label>
