--- a/dealers.html
+++ b/dealers.html
@@ -1547,7 +1547,20 @@ Why SVL Global
 			</nav>
 		</div>
 		<main class="col border-left-2 overflow-hidden">
-			<img class="uk-border-rounded p-3" width="1920" height="500" src="https://picsum.photos/1920/500?random=1">
+			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
+				<div class="uk-child-width-1-3" uk-grid>
+					<div>
+						<img class="uk-border-rounded p-3" width="1920" height="500" src="assets/img/hero-2.png">
+					</div>
+					<div>
+						<img class="uk-border-rounded p-3" width="1920" height="500" src="assets/img/hero-2.png">
+					</div>
+					<div>
+						<img class="uk-border-rounded p-3" width="1920" height="500" src="assets/img/hero-2.png">
+					</div>
+				</div>
+			</section>
+			
 			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Why Join With Us</span></h2>
 				<p class="font-size-4 mb-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, neque, libero. Placeat vitae optio temporibus magni ut, dicta ipsam sit distinctio ad reiciendis aliquid doloremque pariatur cupiditate. Quis, quidem, officiis.</em></p>
