--- a/dealers.html
+++ b/dealers.html
@@ -1547,16 +1547,16 @@ Why SVL Global
 			</nav>
 		</div>
 		<main class="col border-left-2 overflow-hidden">
-			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
-				<div class="uk-child-width-1-3" uk-grid>
+			<section class="uk-section p-4 grey-700 text-justify font-size-3">
+				<div class="uk-child-width-1-3 uk-grid-large" uk-grid>
 					<div>
-						<img class="uk-border-rounded p-3" width="1920" height="500" src="assets/img/hero-2.png">
+						<img class="uk-border-rounded p-3" width="500" height="500" src="assets/img/hero-2.png">
 					</div>
 					<div>
-						<img class="uk-border-rounded p-3" width="1920" height="500" src="assets/img/hero-2.png">
+						<img class="uk-border-rounded p-3" width="500" height="500" src="assets/img/hero-2.png">
 					</div>
 					<div>
-						<img class="uk-border-rounded p-3" width="1920" height="500" src="assets/img/hero-2.png">
+						<img class="uk-border-rounded p-3" width="500" height="500" src="assets/img/hero-2.png">
 					</div>
 				</div>
 			</section>
