--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1548,6 +1548,19 @@ Why SVL Global
 			</nav>
 		</div>
 		<main class="col border-left-2 overflow-hidden">
+			<section class="uk-section p-4 grey-700 text-justify font-size-3">
+				<div class="uk-child-width-1-3 uk-grid-large" uk-grid>
+					<div>
+						<img class="uk-border-rounded p-3" width="500" height="500" src="assets/img/hero-2.png">
+					</div>
+					<div>
+						<img class="uk-border-rounded p-3" width="500" height="500" src="assets/img/hero-2.png">
+					</div>
+					<div>
+						<img class="uk-border-rounded p-3" width="500" height="500" src="assets/img/hero-2.png">
+					</div>
+				</div>
+			</section>
 			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Why Join With Us</span></h2>
 				<p class="font-size-4 mb-4"><em class="text-dark">Would you like to be a piece of an option that could be greater than anything you have known up until this point? At that point this is your chance to go along with us, with our T-PIlots.</em></p>
