--- a/services.html
+++ b/services.html
@@ -1563,8 +1563,8 @@ Why SVL Global
 					</div>
 				</div>
 			</section>
-			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
-				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Why Join With Us</span></h2>
+			<section id="Finance" class="uk-section p-4 grey-700 text-justify font-size-3">
+				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Financial Services</span></h2>
 				<p class="font-size-4 mb-4"><em class="text-dark">Would you like to be a piece of an option that could be greater than anything you have known up until this point? At that point this is your chance to go along with us, with our T-PIlots.</em></p>
 				<div class="uk-child-width-1-2" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
