--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1561,20 +1561,34 @@ Why SVL Global
 					</div>
 				</div>
 			</section>
-			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
-				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Why Join With Us</span></h2>
-				<p class="font-size-4 mb-4"><em class="text-dark">Would you like to be a piece of an option that could be greater than anything you have known up until this point? At that point this is your chance to go along with us, with our T-PIlots.</em></p>
-				<div class="uk-child-width-1-2" uk-grid uk-height-match="target: > div > .uk-card">
+			<section id="Dealers" class="uk-section p-4 grey-700 text-justify font-size-3">
+				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers</span></h2>
+				<div class="uk-child-width-1-1" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
 						<div class="uk-card uk-card-hover uk-card-small">
 							<div class="uk-card-header">
 								<div class="uk-grid-small" uk-grid>
 									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=1">
+										<img class="uk-border-rounded" width="164" height="108" src="assets/img/hero-2.png">
 									</div>
 									<div class="uk-width-expand">
-										<h5>Convenient pick up</h5>
-										<p class="uk-text-meta uk-margin-remove-top">From Sedans and SUVs to Luxury cars for special occasions, we have cabs to suit every pocket</p>
+										<h5>Super Sports Combo</h5>
+										<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
+										<h6>Plan Includes:</h6>
+										<ul class="uk-list uk-list-bullet">
+											<li>Lorem ipsum dolor sit amet</li>
+											<li>consectetur adipisicing elit</li>
+											<li>Consequatur earum dolores quam</li>
+											<li>Porro et impedit amet ut, quas atque</li>
+											<li>Perspiciatis beatae consectetur</li>
+										</ul>
+									</div>
+									<div class="text-right">
+										<h5>$333 <span class="font-weight-light">/month*</span></h5>
+										<p>List Price $502/month</p>
+										<p>12 Months Commitment</p>
+										<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+										<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 									</div>
 								</div>
 							</div>
@@ -1585,11 +1599,26 @@ Why SVL Global
 							<div class="uk-card-header">
 								<div class="uk-grid-small" uk-grid>
 									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=2">
+										<img class="uk-border-rounded" width="164" height="108" src="assets/img/hero-2.png">
 									</div>
 									<div class="uk-width-expand">
-										<h5>Hassle-free</h5>
-										<p class="uk-text-meta uk-margin-remove-top">the fastest and the most affordable way for daily travel.Offering a quicker, efficient, economical and trusted bike taxi.</p>
+										<h5>Super Sports Combo</h5>
+										<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
+										<h6>Plan Includes:</h6>
+										<ul class="uk-list uk-list-bullet">
+											<li>Lorem ipsum dolor sit amet</li>
+											<li>consectetur adipisicing elit</li>
+											<li>Consequatur earum dolores quam</li>
+											<li>Porro et impedit amet ut, quas atque</li>
+											<li>Perspiciatis beatae consectetur</li>
+										</ul>
+									</div>
+									<div class="text-right">
+										<h5>$333 <span class="font-weight-light">/month*</span></h5>
+										<p>List Price $502/month</p>
+										<p>12 Months Commitment</p>
+										<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+										<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 									</div>
 								</div>
 							</div>
@@ -1600,11 +1629,26 @@ Why SVL Global
 							<div class="uk-card-header">
 								<div class="uk-grid-small" uk-grid>
 									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=3">
+										<img class="uk-border-rounded" width="164" height="108" src="assets/img/hero-2.png">
 									</div>
 									<div class="uk-width-expand">
-										<h5>Budget friendly options</h5>
-										<p class="uk-text-meta uk-margin-remove-top">We’ve partnered with local and traditional transport services like autorickshaws to provide users with more options to travel.</p>
+										<h5>Super Sports Combo</h5>
+										<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
+										<h6>Plan Includes:</h6>
+										<ul class="uk-list uk-list-bullet">
+											<li>Lorem ipsum dolor sit amet</li>
+											<li>consectetur adipisicing elit</li>
+											<li>Consequatur earum dolores quam</li>
+											<li>Porro et impedit amet ut, quas atque</li>
+											<li>Perspiciatis beatae consectetur</li>
+										</ul>
+									</div>
+									<div class="text-right">
+										<h5>$333 <span class="font-weight-light">/month*</span></h5>
+										<p>List Price $502/month</p>
+										<p>12 Months Commitment</p>
+										<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+										<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 									</div>
 								</div>
 							</div>
@@ -1615,101 +1659,26 @@ Why SVL Global
 							<div class="uk-card-header">
 								<div class="uk-grid-small" uk-grid>
 									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=4">
+										<img class="uk-border-rounded" width="164" height="108" src="assets/img/hero-2.png">
 									</div>
 									<div class="uk-width-expand">
-										<h5>Go Surge free</h5>
-										<p class="uk-text-meta uk-margin-remove-top">we have simplified the process of air ticket booking by not only offering you an extremely user-friendly interface but some special perks too.</p>
+										<h5>Super Sports Combo</h5>
+										<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
+										<h6>Plan Includes:</h6>
+										<ul class="uk-list uk-list-bullet">
+											<li>Lorem ipsum dolor sit amet</li>
+											<li>consectetur adipisicing elit</li>
+											<li>Consequatur earum dolores quam</li>
+											<li>Porro et impedit amet ut, quas atque</li>
+											<li>Perspiciatis beatae consectetur</li>
+										</ul>
 									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=5">
-									</div>
-									<div class="uk-width-expand">
-										<h5>Road side assistance</h5>
-										<p class="uk-text-meta uk-margin-remove-top">You can book trains for any destination, class or train type. Check out the details like train departure & arrival time between two particular destinations, and even the trains PNR status</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=6">
-									</div>
-									<div class="uk-width-expand">
-										<h5>No hidden charges</h5>
-										<p class="uk-text-meta uk-margin-remove-top">Now, book your bus tickets on T-Pilots and make your bus booking experience smoother and more affordable. Allows you to book tickets from anywhere in India at the lowest price.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=7">
-									</div>
-									<div class="uk-width-expand">
-										<h5>Wide car range</h5>
-										<p class="uk-text-meta uk-margin-remove-top">T-Pilots offers you instant truck booking facility, insurance assistance, and real-time updates regarding the current location of the vehicle.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=8">
-									</div>
-									<div class="uk-width-expand">
-										<h5>Road side assistance</h5>
-										<p class="uk-text-meta uk-margin-remove-top">T-Pilots offers you instant truck booking facility, insurance assistance, and real-time updates regarding the current location of the vehicle.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=9">
-									</div>
-									<div class="uk-width-expand">
-										<h5>An easy way to get around</h5>
-										<p class="uk-text-meta uk-margin-remove-top">T-Pilots offers you instant truck booking facility, insurance assistance, and real-time updates regarding the current location of the vehicle.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="https://picsum.photos/164/108?random=10">
-									</div>
-									<div class="uk-width-expand">
-										<h5>Committed by Safety</h5>
-										<p class="uk-text-meta uk-margin-remove-top">T-Pilots offers you instant truck booking facility, insurance assistance, and real-time updates regarding the current location of the vehicle.</p>
+									<div class="text-right">
+										<h5>$333 <span class="font-weight-light">/month*</span></h5>
+										<p>List Price $502/month</p>
+										<p>12 Months Commitment</p>
+										<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+										<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 									</div>
 								</div>
 							</div>
