--- a/index.html
+++ b/index.html
@@ -195,8 +195,12 @@ Map Share
 Filters Modal
 -->
 <div id="filters-modal" class="uk-modal-container" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body">
+    <div class="uk-modal-dialog uk-margin-auto-vertical">
 		<button class="uk-modal-close-default" type="button" uk-close></button>
+        <div class="uk-modal-header">
+            <h3 class="uk-modal-title">Filters</h3>
+        </div>
+		<div class="uk-modal-body">
         <div class="row align-items-center travel-type-selector mb-3">
 			<div class="col">
 				Discover
@@ -1351,6 +1355,7 @@ Filters Modal
 				</div>
 			</div>
 		</form>
+		</div>
     </div>
 </div>
 <!--
