--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1569,7 +1569,7 @@ Why SVL Global
 							<div class="uk-card-header">
 								<div class="uk-grid-small" uk-grid>
 									<div class="uk-width-auto">
-										<img class="uk-border-rounded" width="164" height="108" src="assets/img/hero-2.png">
+										<img class="uk-border-rounded" src="https://picsum.photos/300/300?random=1">
 									</div>
 									<div class="uk-width-expand">
 										<h5>Super Sports Combo</h5>
