--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1565,31 +1565,29 @@ Why SVL Global
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers</span></h2>
 				<div class="uk-child-width-1-1" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
-						<div class="uk-card uk-card-hover uk-card-small">
-							<div class="uk-card-header">
-								<div class="uk-grid-small" uk-grid>
-									<div class="uk-width-auto">
-										<img class="uk-border-rounded" src="https://picsum.photos/300/300?random=1">
-									</div>
-									<div class="uk-width-expand">
-										<h5>Super Sports Combo</h5>
-										<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
-										<h6>Plan Includes:</h6>
-										<ul class="uk-list uk-list-bullet">
-											<li>Lorem ipsum dolor sit amet</li>
-											<li>consectetur adipisicing elit</li>
-											<li>Consequatur earum dolores quam</li>
-											<li>Porro et impedit amet ut, quas atque</li>
-											<li>Perspiciatis beatae consectetur</li>
-										</ul>
-									</div>
-									<div class="text-right">
-										<h5>$333 <span class="font-weight-light">/month*</span></h5>
-										<p>List Price $502/month</p>
-										<p>12 Months Commitment</p>
-										<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
-										<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
-									</div>
+						<div class="uk-card uk-card-default uk-card-body uk-card-small">
+							<div class="uk-child-width-expand" uk-grid>
+								<div class="uk-width-1-4">
+									<img class="uk-border-rounded" src="https://picsum.photos/300/300?random=1">
+								</div>
+								<div class="uk-width-1-2">
+									<h5>Used Bikes</h5>
+									<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
+									<h6>Plan Includes:</h6>
+									<ul class="uk-list uk-list-bullet">
+										<li>Lorem ipsum dolor sit amet</li>
+										<li>consectetur adipisicing elit</li>
+										<li>Consequatur earum dolores quam</li>
+										<li>Porro et impedit amet ut, quas atque</li>
+										<li>Perspiciatis beatae consectetur</li>
+									</ul>
+								</div>
+								<div class="text-right">
+									<h5>$333 <span class="font-weight-light">/month*</span></h5>
+									<p>List Price $502/month</p>
+									<p>12 Months Commitment</p>
+									<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+									<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 								</div>
 							</div>
 						</div>
