--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1567,10 +1567,10 @@ Why SVL Global
 					<div>
 						<div class="uk-card uk-card-default uk-card-body uk-card-small">
 							<div class="uk-child-width-expand" uk-grid>
-								<div class="uk-width-1-4">
-									<img class="uk-border-rounded" src="https://picsum.photos/300/300?random=1">
+								<div class="uk-width-2-5">
+									<img class="uk-border-rounded" src="https://picsum.photos/500/500?random=1">
 								</div>
-								<div class="uk-width-1-2">
+								<div class="uk-width-expand">
 									<h5>Used Bikes</h5>
 									<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
 									<h6>Plan Includes:</h6>
@@ -1582,7 +1582,7 @@ Why SVL Global
 										<li>Perspiciatis beatae consectetur</li>
 									</ul>
 								</div>
-								<div class="text-right">
+								<div class="uk-width-1-4 text-right">
 									<h5>$333 <span class="font-weight-light">/month*</span></h5>
 									<p>List Price $502/month</p>
 									<p>12 Months Commitment</p>
