--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1566,7 +1566,7 @@ Why SVL Global
 				<div class="uk-child-width-1-1" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
 						<div class="uk-card uk-card-default uk-card-body uk-card-small">
-							<div class="uk-child-width-expand" uk-grid>
+							<div class="uk-child-width-expand uk-grid-small" uk-grid>
 								<div class="uk-width-2-5">
 									<img class="uk-border-rounded" src="https://picsum.photos/500/500?random=1">
 								</div>
