--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1570,25 +1570,31 @@ Why SVL Global
 								<div class="uk-width-2-5">
 									<img class="uk-border-rounded" src="https://picsum.photos/id/564/500/500">
 								</div>
-								<div class="uk-width-expand">
-									<h5>Used Bikes</h5>
+								<div>
+									<h5>Used Bike Dealers</h5>
 									<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
-									<h6>Plan Includes:</h6>
-									<ul class="uk-list uk-list-bullet">
-										<li>Lorem ipsum dolor sit amet</li>
-										<li>consectetur adipisicing elit</li>
-										<li>Consequatur earum dolores quam</li>
-										<li>Porro et impedit amet ut, quas atque</li>
-										<li>Perspiciatis beatae consectetur</li>
-									</ul>
+									<div class="uk-child-width-expand uk-grid-small" uk-grid>
+										<div class="uk-width-1-2">
+											<h6>Plan Includes:</h6>
+											<ul class="uk-list uk-list-bullet">
+												<li>Lorem ipsum dolor sit amet</li>
+												<li>consectetur adipisicing elit</li>
+												<li>Consequatur earum dolores quam</li>
+												<li>Porro et impedit amet ut, quas atque</li>
+												<li>Perspiciatis beatae consectetur</li>
+											</ul>
+										</div>
+										<div class="uk-width-1-2 text-right">
+											<h5>$333 <span class="font-weight-light">/month*</span></h5>
+											<p>List Price $502/month</p>
+											<p>12 Months Commitment</p>
+											<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+											<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
+										</div>
+									</div>
+									
 								</div>
-								<div class="uk-width-1-4 text-right">
-									<h5>$333 <span class="font-weight-light">/month*</span></h5>
-									<p>List Price $502/month</p>
-									<p>12 Months Commitment</p>
-									<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
-									<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
-								</div>
+								
 							</div>
 						</div>
 					</div>
