--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1571,11 +1571,11 @@ Why SVL Global
 									<img class="uk-border-rounded" src="https://picsum.photos/id/564/500/500">
 								</div>
 								<div>
-									<h5>Used Bike Dealers</h5>
+									<h5 class="text-success">Used Bike Dealers</h5>
 									<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
 									<div class="uk-child-width-expand uk-grid-small" uk-grid>
 										<div class="uk-width-1-2">
-											<h6>Plan Includes:</h6>
+											<h6>Integrated Features:</h6>
 											<ul class="uk-list uk-list-bullet">
 												<li>Lorem ipsum dolor sit amet</li>
 												<li>consectetur adipisicing elit</li>
