--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1565,17 +1565,17 @@ Why SVL Global
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealers</span></h2>
 				<div class="uk-child-width-1-1" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
-						<div class="uk-card uk-card-default uk-card-body uk-card-small">
+						<div class="card card-body shadow-4dp">
 							<div class="uk-child-width-expand uk-grid-small" uk-grid>
 								<div class="uk-width-2-5">
 									<img class="uk-border-rounded" src="https://picsum.photos/id/564/500/500">
 								</div>
 								<div>
-									<h5 class="text-success">Used Bike Dealers</h5>
+									<h3 class="text-success">Used Bike Dealers</h3>
 									<p class="uk-margin-remove-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem omnis, autem soluta voluptate sint quo voluptatibus nostrum id, delectus, eaque exercitationem reiciendis doloremque commodi consequuntur sequi nam! Dicta, incidunt recusandae.</p>
 									<div class="uk-child-width-expand uk-grid-small" uk-grid>
 										<div class="uk-width-1-2">
-											<h6>Integrated Features:</h6>
+											<h5>Integrated Features:</h5>
 											<ul class="uk-list uk-list-bullet">
 												<li>Lorem ipsum dolor sit amet</li>
 												<li>consectetur adipisicing elit</li>
@@ -1585,10 +1585,10 @@ Why SVL Global
 											</ul>
 										</div>
 										<div class="uk-width-1-2 text-right">
-											<h5>$333 <span class="font-weight-light">/month*</span></h5>
-											<p>List Price $502/month</p>
+											<h5 class="text-success">999 <span class="font-weight-light">/month*</span></h5>
+											<p>Actual Price <s>4995</s>/month</p>
 											<p>12 Months Commitment</p>
-											<p><a class="btn btn-warning" href="#" role="button">Subscribe</a></p>
+											<p><a class="btn btn-primary rounded-pill shadow-sm bg-orange-500-hover border-orange-500-hover px-5" href="#" role="button">Subscribe</a></p>
 											<a class="uk-button uk-button-text" href="#" role="button">Learn More</a>
 										</div>
 									</div>
